# fit

./: main.py  pyproject.toml  trainer.db
api/: main.py  schemas.py
api/core/: dependencies.py
api/endpoints/: clients.py  home.py  options.py
db/: database.py  init_db.py  models.py
db/repositories/: client_repo.py
services/: client_service.py
static/: style.css
static/templates/: base.html
static/templates/clients/: clients.html  home.html  new.html
